force-app/main/default/objects/Bank_Account__c/fields/Account_Holder_s_Address__c.field-meta.xml
<CustomField>
    <fullName>Account_Holder_s_Address__c</fullName>
    <label>Account Holder&apos;s Address</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>