force-app/main/default/objects/Bank_Account__c/fields/Account_Holder_s_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Holder_s_Contact_Number__c</fullName>
    <label>Account Holder&apos;s Contact Number</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>