force-app/main/default/objects/Bank_Account__c/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <label>Account Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Current Account General</fullName>
            </value>
            <value>
                <fullName>Demat Account</fullName>
            </value>
            <value>
                <fullName>Forex Account</fullName>
            </value>
            <value>
                <fullName>Saving Account Minor</fullName>
            </value>
            <value>
                <fullName>Savings Account General</fullName>
            </value>
            <value>
                <fullName>Savings Account Senior</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>