force-app/main/default/objects/Bank_Account__c/fields/Trading_Limit_of_Demat_Account__c.field-meta.xml
<CustomField>
    <fullName>Trading_Limit_of_Demat_Account__c</fullName>
    <label>Trading Limit of Demat Account</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>